--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -220,7 +220,7 @@ repo = 'lukas-reineke/indent-blankline.nvim'
 depends = 'nvim-treesitter'
 on_event = ['CursorHold', 'CursorMoved', 'CursorMovedI']
 lua_source = '''
-    require('rcutil.highlight').set {
+    require('vimrc.highlight').set {
         IndentBlanklineIndentChar = { fg = '#373741', nocombine = true },
         IndentBlanklineScopeChar = { fg = '#737378', nocombine = true },
     }
