--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,14 @@
 # tmuxの設定を反映させる方法
 # tmux source ~/.tmux.conf
 
-source-file ~/dotfiles/tmux/config/option.tmux
-source-file ~/dotfiles/tmux/config/status.tmux
-source-file ~/dotfiles/tmux/config/mapping.tmux
-source-file ~/dotfiles/tmux/config/plugin.tmux
+# source-file "$XDG_CONFIG_HOME/tmux/config/option.tmux"
+# source-file "$XDG_CONFIG_HOME/tmux/config/status.tmux"
+# source-file "$XDG_CONFIG_HOME/tmux/config/mapping.tmux"
+# source-file "$XDG_CONFIG_HOME/tmux/config/plugin.tmux"
+source-file "~/.config/tmux/config/option.tmux"
+source-file "~/.config/tmux/config/status.tmux"
+source-file "~/.config/tmux/config/mapping.tmux"
+source-file "~/.config/tmux/config/plugin.tmux"
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
