--- a/config-files/alacritty.toml
+++ b/config-files/alacritty.toml
@@ -28,23 +28,18 @@ unfocused_hollow = true
 style = { blinking = "Off", shape = "Block" }
 
 [shell]
-program = "/bin/zsh"
+program = "/bin/bash"
 args = [
-    "--login",
-    "--interactive",
     "-c",
     '''
-        ID="`tmux list-sessions`"
-        if [[ -z "$ID" ]]; then
-          tmux new-session
-        fi
-        create_new_session="Create New Session"
-        ID="$ID\n${create_new_session}:"
-        ID="`echo $ID | $PERCOL | cut -d: -f1`"
-        if [[ "$ID" = "${create_new_session}" ]]; then
-          tmux new-session
-        fi
-        tmux attach-session -t "$ID"
+    tmux_connect="$HOME/.local/bin/tmux-connect"
+    tmux_paths="$HOME/.nix-profile/bin/tmux"
+    if [[ -x "$tmux_connect" ]]; then
+      exec "$tmux_connect" --paths "$tmux_paths"
+    else
+      echo "Command not found: $tmux_connect"
+      exec /bin/zsh
+    fi
     '''
 ]
 
