--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,17 +1,17 @@
-# tmuxの設定を反映させる方法
-# tmux source ~/.tmux.conf
+# set-environment -g では shell 実行での変数を定義できるだけっぽい。
+# だから XDG_CONFIG_HOME とかは設定しても使えない。
 
-# source-file "$XDG_CONFIG_HOME/tmux/config/option.tmux"
-# source-file "$XDG_CONFIG_HOME/tmux/config/status.tmux"
-# source-file "$XDG_CONFIG_HOME/tmux/config/mapping.tmux"
-# source-file "$XDG_CONFIG_HOME/tmux/config/plugin.tmux"
-source-file "~/.config/tmux/config/option.tmux"
-source-file "~/.config/tmux/config/status.tmux"
-source-file "~/.config/tmux/config/mapping.tmux"
-source-file "~/.config/tmux/config/plugin.tmux"
+source-file "$HOME/.config/tmux/config/option.tmux"
+source-file "$HOME/.config/tmux/config/status.tmux"
+source-file "$HOME/.config/tmux/config/mapping.tmux"
+source-file "$HOME/.config/tmux/config/plugin.tmux"
 
-# Automatic tpm installation
-if "test ! -d ~/.tmux/plugins/tpm" "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+# Automatic tmp (tmux plugin manager) installation
+if-shell "test ! -d $HOME/.cache/tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm $HOME/.cache/tmux/plugins/tpm'"
 
-# Initialize TMUX plugin manager (これは最後に記述すること)
-run '~/.tmux/plugins/tpm/tpm'
+# Setup tmp
+# tmux へのパスを通す必要がある: https://github.com/tmux-plugins/tpm/issues/67
+set-environment -g PATH "$HOME/.nix-profile/bin:$PATH"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.cache/tmux/plugins"
+run-shell "$HOME/.cache/tmux/plugins/tpm/tpm"
