--- a/config-files/alacritty.toml
+++ b/config-files/alacritty.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [env]
 TERM = "xterm-256color"
 
@@ -27,7 +25,7 @@ cursor = { cursor = "#fffaf5", text = "CellBackground" }
 unfocused_hollow = true
 style = { blinking = "Off", shape = "Block" }
 
-[shell]
+[terminal.shell]
 program = "/bin/bash"
 args = [
     "-c",
@@ -56,3 +54,6 @@ mods = "Alt"
 action = "IncreaseFontSize"
 key = "Semicolon"
 mods = "Command|Shift"
+
+[general]
+live_config_reload = true
