fix the use of exec

--- a/config-files/alacritty.toml
+++ b/config-files/alacritty.toml
@@ -33,10 +33,10 @@ args = [
     tmux_connect="$HOME/.local/bin/tmux-connect"
     tmux_paths="$HOME/.nix-profile/bin/tmux"
     if [[ -x "$tmux_connect" ]]; then
-      exec "$tmux_connect" --paths "$tmux_paths"
+      "$tmux_connect" --paths "$tmux_paths"
     else
       echo "Command not found: $tmux_connect"
-      exec /bin/zsh
+      /bin/zsh
     fi
     '''
 ]
