--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -399,8 +399,8 @@ repo = 'Milly/ddu-filter-merge'
 on_source = 'ddu.vim'
 
 [[plugins]]
-repo = 'ryota2357/ddu-column-icon_filename'
-# repo = '~/Projects/VimPlugin/ddu-column-icon_filename'
+# repo = 'ryota2357/ddu-column-icon_filename'
+repo = '~/Projects/VimPlugin/ddu-column-icon_filename'
 on_source = 'ddu.vim'
 
 [[plugins]]
