--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -97,7 +97,11 @@ lua_source = '''
         },
         sourceParams = {
             file_rec = {
-                ignoredDirectories = { '.git', '.direnv', 'node_modules', '.next', '.cache', 'target', '.idea', '.lake', '.stack-work', '.venv', '__pycache__' }
+                ignoredDirectories = {
+                    '.git', '.direnv', '.idea', '.cache',
+                    '.next', '.lake', '.stack-work', '.venv',
+                    'node_modules',  'target',  '__pycache__', 'dist-newstyle',
+                }
             },
             rg = {
                 args = { '--json', '--ignore-case' },
