--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -81,7 +81,7 @@ lua_source = '''
             copilot = function()
                 return require("codecompanion.adapters").extend("copilot", {
                     schema = {
-                      model = { default = "claude-3.7-sonnet" },
+                      model = { default = "claude-sonnet-4" },
                     }
                 })
             end,
